--- a/Kindergarten_Management_System_G4/src/main/webapp/css/sidebar.css
+++ b/Kindergarten_Management_System_G4/src/main/webapp/css/sidebar.css
@@ -54,7 +54,7 @@ aside, main{
     min-width: 70px;
     z-index: 1000;
     transition: all .25s ease-in-out;
-    background-color: #0e2238;
+    background-color: #cf1d59;
     display: flex;
     flex-direction: column;
 }
